# 3dmodeler

./: .gitignore  CMakeLists.txt  build.sh  build_examples.sh
.github/workflows/: build.yml  release.yml
3dmodeler/: .gitignore  Cargo.toml  README.md  check.sh  plan.md  scene.json
3dmodeler/.cargo/: config.toml
3dmodeler/crates/box3d-sys/: Cargo.toml  build.rs  wrapper.h
3dmodeler/crates/box3d-sys/shims/: wasm_shims.c
3dmodeler/crates/box3d-sys/src/: lib.rs
3dmodeler/crates/modeler-ai/: Cargo.toml
3dmodeler/crates/modeler-ai/src/: anthropic.rs  lib.rs  openai_compat.rs  pricing.rs  types.rs
3dmodeler/crates/modeler-app/: Cargo.toml  Trunk.toml  index.html
3dmodeler/crates/modeler-app/src/: add_menu.rs  axis_widget.rs  blend.rs  camera.rs  clipboard.rs  commands.rs  context_menu.rs  control.rs  cutout_handles.rs  edit_mode.rs  force_handles.rs  gl_window.rs  grid.rs  io.rs  library.rs  main.rs  mesh_edit.rs  modal.rs  modifiers.rs  net.rs  object_ops.rs  overlay.rs  pdf.rs  physics.rs  pie.rs  poke.rs  preview.rs  ref_image.rs  ref_setup.rs  roof_tool.rs  rope_handles.rs  scene_render.rs  selection.rs  settings.rs  theme.rs  ui.rs  undo.rs  wall_tool.rs  wire_render.rs
3dmodeler/crates/modeler-app/src/ai/: mod.rs  panel.rs  tools.rs
3dmodeler/crates/modeler-app/src/blend_scripts/: blend_to_json.py  json_to_blend.py
3dmodeler/crates/modeler-core/: Cargo.toml
3dmodeler/crates/modeler-core/src/: boolean.rs  lib.rs  library.rs  material.rs  mesh.rs
3dmodeler/crates/modeler-mcp/: Cargo.toml
3dmodeler/crates/modeler-mcp/src/: main.rs
3dmodeler/crates/phase0-spike/: Cargo.toml
3dmodeler/crates/phase0-spike/src/: lib.rs  main.rs
3dmodeler/docs/: mcp.md
3dmodeler/scripts/: start.sh
3dmodeler/tools/: get-wasi-sysroot.sh
3dmodeler/web/: index.html  run_node.mjs  spike-glue.mjs
RustTest/: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
RustTest/src/: main.rs
Vibecoding/: 3d-cuda.md  3dmodeler-basis.md  Instructions.md  ai-integration.md  bug-fixes.md  deployment.md  mcp-tool.md  object-library.md  performance-plan.md  reference-images.md  wall-tool.md
Vibecoding/bench-local/: joint_grid.csv  junkyard.csv  large_pyramid.csv  large_world.csv  many_pyramids.csv  rain.csv  trees100.csv  trees25.csv  trees50.csv  washer.csv
src/: CMakeLists.txt  contact_solver.c  convex_manifold.c  core.h  hull.c  parallel_for.c  solver.c
