[workspace]
resolver = "2"
members = [
    "crates/box3d-sys",
    "crates/phase0-spike",
    "crates/modeler-core",
    "crates/modeler-ai",
    "crates/modeler-app",
    "crates/modeler-mcp",
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Keep dev builds fast enough to be usable in the browser
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
