[package]
name = "modeler-app"
version = "0.1.2"
edition = "2021"
description = "3D modeler application: viewport, tools, UI (native + browser)"

[dependencies]
modeler-core = { path = "../modeler-core" }
box3d-sys = { path = "../box3d-sys" }
three-d = { version = "0.19", features = ["egui-gui"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tiny_http = "0.12"
png = "0.17"
rfd = "0.15"
dirs = "5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Storage",
    "Blob",
    "Url",
    "HtmlAnchorElement",
    "Document",
    "Element",
    "Node",
    "HtmlElement",
    "CssStyleDeclaration",
    "HtmlInputElement",
    "FileList",
    "File",
    "FileReader",
    "Event",
] }
js-sys = "0.3" 
console_error_panic_hook = "0.1"
