[package]
name = "modeler-app"
version = "0.2.38"
edition = "2021"
description = "3D modeler application: viewport, tools, UI (native + browser)"

[dependencies]
modeler-core = { path = "../modeler-core" }
modeler-ai = { path = "../modeler-ai" }
box3d-sys = { path = "../box3d-sys" }
three-d = { version = "0.19", features = ["egui-gui"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = "0.28" # same version as three-d's (we own the event loop for OS file drops)
glutin = "0.30" # same version as three-d's (we own GL context creation — see gl_window.rs)
raw-window-handle = "0.5"
tiny_http = "0.12"
rfd = "0.15"
dirs = "5"
ureq = "2"
arboard = "3" # OS clipboard for paste into egui fields (see clipboard.rs)

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Storage",
    "Blob",
    "Url",
    "HtmlAnchorElement",
    "Document",
    "Element",
    "Node",
    "HtmlElement",
    "CssStyleDeclaration",
    "HtmlInputElement",
    "FileList",
    "File",
    "FileReader",
    "Event",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "ClipboardEvent",
    "DataTransfer",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
