[package]
name = "modeler-core"
version = "0.1.0"
edition = "2021"
description = "Scene document, mesh primitives and commands for the 3D modeler (no rendering, no FFI)"

[dependencies]
boolmesh = { version = "0.1.9", features = ["rayon"] }
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
